--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<%= render 'components/page/page' do %>
-  <p>Ruby Bank: Coding Challenge #2</p>
+<%= c('page') do %>
+  <h1>Ruby Bank</h1>
 <% end %>
