:bear: frontend components for transactions
Step 4: add Credit and Transaction concepts

--- a/frontend/components/account/_account.html.erb
+++ b/frontend/components/account/_account.html.erb
@@ -1,3 +1,4 @@
- <div class="account">
-   <%= c('balance') %>
- </div>
+<div class="account">
+  <%= c('balance') %>
+  <%= c('transactions') %>
+</div>
