--- a/frontend/components/transactions/transactions.css
+++ b/frontend/components/transactions/transactions.css
@@ -1,9 +1,16 @@
-.transactions .credit {
-  flex-basis: 35em;
+.transactions .transaction {
+  text-align: left;
   border: 0.1em solid #2e2f30;
   margin: 0.5em;
-  padding: 1em;
+  padding: 0.5em;
+}
+
+.transactions .credit {
   background-color: lightgreen;
+}
+
+.transactions .debit {
+  background-color: lightpink;
 }
 
 .transactions span,
