--- a/frontend/components/transfer-form/_transfer-form.html.erb
+++ b/frontend/components/transfer-form/_transfer-form.html.erb
@@ -2,9 +2,9 @@
   <fieldset>
     <legend>Transfer $$$'s to an Internet Friend</legend>
     <label for="amount">Amount</label>
-    <input name="amount" class="amount" value="0.0"/>
+    <input name="amount" class="amount js-input-amount" value="0.0"/>
     <label for="email">Your Friend's Email Address</label>
-    <input name="email" minlength="35" class="email"/>
-    <button name="send" class="send">Send</button>
+    <input name="email" minlength="35" class="email js-input-email"/>
+    <button name="send" class="send js-form-submit">Send</button>
   </fieldset>
 </div>
