:bear: :construction: receive new Account element from channel
Step 5: Transfer form and channel

--- a/frontend/components/account/_account.html.erb
+++ b/frontend/components/account/_account.html.erb
@@ -1,5 +1,5 @@
 <div class="account">
-  <%= c('balance') %>
+  <%= c('balance', account: account) %>
   <%= c('transfer-form') %>
-  <%= c('transactions') %>
+  <%= c('transactions', account: account) %>
 </div>
