--- a/frontend/components/balance/_balance.html.erb
+++ b/frontend/components/balance/_balance.html.erb
@@ -1,4 +1,4 @@
 <div class="balance">
   <h2>Balance</h2>
-  <span><%= number_to_currency(current_user.balance) %></span>
+  <span><%= number_to_currency(account.balance) %></span>
 </div>
